--- a/views/DatosPersonales.ejs
+++ b/views/DatosPersonales.ejs
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Web Vacunación</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
         integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN"
         crossorigin="anonymous"></script>
@@ -14,87 +15,175 @@
         integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/DatosPersonalesCSS.css">
+    <link rel="stylesheet" href="/css/usuario.css">
 </head>
 
 <body>
+    <div class="row">
+        <div class="col m-4">
+            <div class="d-flex flex-row ">
+                <h1>COVID-19</h1>
+            </div>
+        </div>
+        <div class="col">
+            <div class="logo-minsa">
+                <img class="img-sc" src="/images/MINSA.jpg" alt="MINSA">
+            </div>
+        </div>
 
-    <header>
-        <div class="row">
-            <div class="col">
-                <h1>Covid</h1>
-            </div>
-            <div class="col img-fluid">
-                <img src="/images/MINSA.jpg" alt="">
-            </div>
+    </div>
+    <header class="header">
+        <div class="logo-nav-container">
+            <a href="#" class="logo">BIENVENIDO</a>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="22px" height="22px" fill="currentColor"
+                                class="bi bi-person-circle" viewBox="0 0 16 16">
+                                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z" />
+                                <path fill-rule="evenodd"
+                                    d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z" />
+                            </svg>
+                        </a></li>
+                    <li><a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="22px" height="22px" fill="currentColor"
+                                class="bi bi-gear" viewBox="0 0 16 16">
+                                <path
+                                    d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z" />
+                                <path
+                                    d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52l-.094-.319zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115l.094-.319z" />
+                            </svg>
+                        </a></li>
+                    <li><a href="#">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="22px" height="22px" fill="currentColor"
+                                class="bi bi-bell" viewBox="0 0 16 16">
+                                <path
+                                    d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z" />
+                            </svg>
+                        </a></li>
+                    <li><a href="#">Perfil</a></li>
+                    <li><a href="#">Inicio</a></li>
+                </ul>
+            </nav>
         </div>
     </header>
-    <nav>
-        <div class="row">
-            <div class="col">
-                <h3>Datos de tu perfil</h3>
-            </div>
-            <div class="col">
-                <span>Inicio</span>
-                <span>Perfil</span>
-                <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
-                    <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z"/>
-                  </svg></span>
-                <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gear-fill" viewBox="0 0 16 16">
-                    <path d="M9.405 1.05c-.413-1.4-2.397-1.4-2.81 0l-.1.34a1.464 1.464 0 0 1-2.105.872l-.31-.17c-1.283-.698-2.686.705-1.987 1.987l.169.311c.446.82.023 1.841-.872 2.105l-.34.1c-1.4.413-1.4 2.397 0 2.81l.34.1a1.464 1.464 0 0 1 .872 2.105l-.17.31c-.698 1.283.705 2.686 1.987 1.987l.311-.169a1.464 1.464 0 0 1 2.105.872l.1.34c.413 1.4 2.397 1.4 2.81 0l.1-.34a1.464 1.464 0 0 1 2.105-.872l.31.17c1.283.698 2.686-.705 1.987-1.987l-.169-.311a1.464 1.464 0 0 1 .872-2.105l.34-.1c1.4-.413 1.4-2.397 0-2.81l-.34-.1a1.464 1.464 0 0 1-.872-2.105l.17-.31c.698-1.283-.705-2.686-1.987-1.987l-.311.169a1.464 1.464 0 0 1-2.105-.872l-.1-.34zM8 10.93a2.929 2.929 0 1 1 0-5.86 2.929 2.929 0 0 1 0 5.858z"/>
-                  </svg><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-square" viewBox="0 0 16 16">
-                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                    <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2zm12 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1v-1c0-1-1-4-6-4s-6 3-6 4v1a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h12z"/>
-                  </svg></span>
-            </div>
-        </div>
-    </nav>
+
     <main>
         <div class="row">
             <!--Para los datos del perfil Nombre, APellido, entre otros-->
-            <div class="col">
+            <div class="col PanelDatos">
                 <!--Título y botón-->
-                <div class="row">
+                <div class="row TitulosCard">
                     <div class="col">
-                        <h4>Datos Personales</h4>
+                        <h4>Datos Personales </h4>
                     </div>
-                    <div class="col">
-                        <button> Historial Clínico</button>
+                    <div class="col BotonHistorial">
+                        <button class="btn btn-primary btn-sm"> Historial Clínico <svg
+                                xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                                class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd"
+                                    d="M6 3.5a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-2a.5.5 0 0 0-1 0v2A1.5 1.5 0 0 0 6.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-8A1.5 1.5 0 0 0 5 3.5v2a.5.5 0 0 0 1 0v-2z" />
+                                <path fill-rule="evenodd"
+                                    d="M11.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 1 0-.708.708L10.293 7.5H1.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z" />
+                            </svg></button>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col">
-                        <div class="">Nombre <input type="text" class="w-80" placeholder="Nombre de Usuario"></div>
-                        <div class="">Apellidos <input type="text" class="w-80" placeholder="Apellido de Usuario"></div>
+                <div class="row ">
+                    <div class="col Container2">
+                        <div class="row mb-3 Inputs">
+                            <label for="" class="col-sm-2 col-form-label">Nombre</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="inputEmail3" placeholder="Alejandro">
+                            </div>
+                        </div>
+                        <div class="row mb-3 Inputs">
+                            <label for="" class="col-sm-2 col-form-label">Apellido</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="inputEmail3" placeholder="Sarmiento">
+                            </div>
+                        </div>
                         <div class="row">
-                            <div class="col-6">Edad <input type="text" class="w-50" placeholder="20"></div>
-                            <div class="col-6">Sexo <input type="text" class="w-50" placeholder="M"></div>
+                            <label for="" class="col-sm-2 col-form-label">Edad</label>
+                            <div class="col">
+                                <input type="text" class="form-control SexEdad" placeholder="20"
+                                    aria-label="First name">
+                            </div>
+                            <label for="" class="col-sm-2 col-form-label">Sexo</label>
+                            <div class="col">
+                                <input type="text" class="form-control SexEdad" placeholder="Last name"
+                                    aria-label="Last name">
+                            </div>
+                        </div>
+                        <div class="row mb-3 Inputs">
+                            <label for="" class="col-sm-2 col-form-label">Dir.</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="inputEmail3"
+                                    placeholder="Jr. Machu Pichu 608">
+                            </div>
+                        </div>
+                        <div class="row mb-3 Inputs">
+                            <label for="" class="col-sm-2 col-form-label">Teléfono</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="inputEmail3" placeholder="940 317 785">
+                            </div>
                         </div>
                     </div>
                     <div class="col">
-                        <img class= "img-fluid" src="/images/inicio.jpg" alt="">
+                        <img class="img-fluid" src="/images/inicio.jpg" alt="">
                     </div>
                 </div>
 
-                <div>
-                    <h4>Centro de Vacunación</h4>
+                <!--Segundo carril-->
+                <div class="row ">
+                    <div class="col Container3">
+                        <div class="card">
+                            <div class="card-body">
+                              <div>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-exclamation-diamond" viewBox="0 0 16 16">
+                                    <path d="M6.95.435c.58-.58 1.52-.58 2.1 0l6.515 6.516c.58.58.58 1.519 0 2.098L9.05 15.565c-.58.58-1.519.58-2.098 0L.435 9.05a1.482 1.482 0 0 1 0-2.098L6.95.435zm1.4.7a.495.495 0 0 0-.7 0L1.134 7.65a.495.495 0 0 0 0 .7l6.516 6.516a.495.495 0 0 0 .7 0l6.516-6.516a.495.495 0 0 0 0-.7L8.35 1.134z"/>
+                                    <path d="M7.002 11a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 4.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 4.995z"/>
+                                  </svg> Importante
+                              </div>
+                              <div>
+                                Revisa los horarios de inmovilización social obligatoria que debes respetar  del 20 de setiembre al 3 de octubre de 2021 según el nivel de alerta de la región donde vives.
+                              </div>
+                            </div>
+                          </div>
+                    </div>
+
+                    <div class="col Container4">
+                        <div class="col">
+                            <h4>Centro de vacunación </h4>
+                        </div>
+                        <div class="row mb-3 Inputs">
+                            <label for="" class="col-sm-2 col-form-label">Centro</label>
+                            <div class="col-sm-10">
+                                <select class="form-select " aria-label="Default select example">
+                                    <option selected>Aún no le asigna centro de vacunación</option>
+                                    <option value="1">Parque Adulto Mayor</option>
+                                    <option value="2">Estadio Monumental</option>
+                                    <option value="3">Clínica Internacional</option>
+                                </select>    
+                            </div>
+                        </div>
+                        <div class="row mb-3 Inputs">
+                            <label for="" class="col-sm-2 col-form-label">Vacuna</label>
+                            <div class="col-sm-10">
+                                <input type="text" class="form-control" id="inputEmail3" placeholder="Pfizer">
+                            </div>
+                        </div>
+                    </div>
+                    
                 </div>
-                <div class="mr-3 ml-3">
-                    <select class="form-select " aria-label="Default select example">
-                        <option selected>Centros de vacunación</option>
-                        <option value="1">Parque Adulto Mayor</option>
-                        <option value="2">Estadio Monumental</option>
-                        <option value="3">Clínica Internacional</option>
-                      </select>
-                </div>
-                <div>
-                    Tipo de vacunación <input type="text"placeholder="Pfizer">
-                </div>
+
+                <!--Fin-->
                 
+
             </div>
             <div class="col">
-                <h4>Calendario de vacunación</h4>
+                <h3>Calendario de vacunación</h3>
                 <div class="Calendario">
-                    <h5>Octubre 2021</h5>
+                    <h4>Octubre 2021</h4>
                     <ol>
                         <li class="day-name">Lun</li>
                         <li class="day-name">Mar</li>
@@ -104,44 +193,46 @@
                         <li class="day-name">Sab</li>
                         <li class="day-name">Dom</li>
                         <li class="PrimerDia">1</li>
-                        <li>2</li>
-                        <li>3</li>
-                        <li>4</li>
-                        <li>5</li>
-                        <li>6</li>
-                        <li>7</li>
-                        <li>8</li>
-                        <li>9</li>
-                        <li>10</li>
-                        <li>11</li>
-                        <li>12</li>
-                        <li>13</li>
-                        <li>14</li>
-                        <li>15</li>
-                        <li>16</li>
-                        <li>17</li>
-                        <li>18</li>
-                        <li>19</li>
-                        <li>20</li>
-                        <li>21</li>
-                        <li>22</li>
-                        <li>23</li>
-                        <li>24</li>
-                        <li>25</li>
-                        <li>26</li>
-                        <li>27</li>
-                        <li>28</li>
-                        <li>29</li>
-                        <li>30</li>
-                        <li>31</li>
+                        <li class="Espacio">2</li>
+                        <li class="Espacio">3</li>
+                        <li class="Espacio">4</li>
+                        <li class="Espacio">5</li>
+                        <li class="Espacio">6</li>
+                        <li class="Espacio">7</li>
+                        <li class="Espacio">8</li>
+                        <li class="Espacio">9</li>
+                        <li class="Espacio">10</li>
+                        <li class="Espacio">11</li>
+                        <li class="Espacio">12</li>
+                        <li class="Espacio">13</li>
+                        <li class="Espacio">14</li>
+                        <li class="Espacio">15</li>
+                        <li class="Espacio">16</li>
+                        <li class="Espacio">17</li>
+                        <li class="Espacio">18</li>
+                        <li class="Espacio">19</li>
+                        <li class="Espacio">20</li>
+                        <li class="Espacio">21</li>
+                        <li class="Espacio">22</li>
+                        <li class="Espacio">23</li>
+                        <li class="Espacio">24</li>
+                        <li class="Espacio">25</li>
+                        <li class="Espacio">26</li>
+                        <li class="Espacio">27</li>
+                        <li class="Espacio">28</li>
+                        <li class="Espacio">29</li>
+                        <li class="Espacio">30</li>
+                        <li class="Espacio">31</li>
                     </ol>
                 </div>
-                
+
             </div>
         </div>
     </main>
-    <footer>
-        Derechos reservados Grupo 1 Software II - 2021
+    <footer class="footer">
+        <div class="container">
+            <p>Derechos reservados Grupo 1 Software II - 2021</p>
+        </div>
     </footer>
 </body>
 
